2010-05-19  Victor Wang  <victorw@chromium.org>

        Unreviewed. Update Chromium test expectations.

        * platform/chromium-linux/fast/multicol/layers-split-across-columns-expected.checksum: Added.
        * platform/chromium-linux/fast/multicol/layers-split-across-columns-expected.png: Added.
        * platform/chromium-mac/fast/multicol/layers-in-multicol-expected.checksum:
        * platform/chromium-mac/fast/multicol/layers-in-multicol-expected.png: Removed.
        * platform/chromium-mac/fast/multicol/layers-split-across-columns-expected.checksum: Added.
        * platform/chromium-win/fast/multicol/layers-in-multicol-expected.txt:
        * platform/chromium-win/fast/multicol/layers-split-across-columns-expected.checksum: Added.
        * platform/chromium-win/fast/multicol/layers-split-across-columns-expected.png: Added.
        * platform/chromium-win/fast/multicol/layers-split-across-columns-expected.txt: Added.
        * platform/chromium-win/fast/multicol/nested-columns-expected.txt:

2010-05-19  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        emitJumpIfNotJSCell should special case constant immediate values
        https://bugs.webkit.org/show_bug.cgi?id=39392

        Add tests for immediate constants being used where cells are expected.

        * fast/js/immediate-constant-instead-of-cell-expected.txt: Added.
        * fast/js/immediate-constant-instead-of-cell.html: Added.
        * fast/js/script-tests/immediate-constant-instead-of-cell.js: Added.
        ():

2010-05-19  Jian Li  <jianli@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Refactor text encoding detection logic in FileReader.
        https://bugs.webkit.org/show_bug.cgi?id=39131

        Add more test coverage for FileReader.

        * fast/files/file-reader-expected.txt:
        * fast/files/file-reader.html:
        * fast/files/resources/binary-file: Added.

2010-05-19  Martin Robinson  <mrobinson@igalia.com>
